1: Working on dynamic goal summary.

--- a/app/src/main/res/layout/fragment_your_goal.xml
+++ b/app/src/main/res/layout/fragment_your_goal.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,9 +11,15 @@
 
     </data>
 
-    <org.supportcompact.widgets.NonSwipeableViewPager
+    <!--<org.supportcompact.widgets.NonSwipeableViewPager
         android:id="@+id/mPageGoal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" />-->
+    <org.supportcompact.widgets.SnappyRecyclerView
+        android:id="@+id/rvPage"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
 </layout>
