--- a/app/src/main/res/layout/fragment_your_goal_summary.xml
+++ b/app/src/main/res/layout/fragment_your_goal_summary.xml
@@ -171,10 +171,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_8"
+                    android:layout_marginTop="@dimen/default_space"
                     android:layout_marginEnd="@dimen/space_8"
                     android:orientation="horizontal"
                     android:overScrollMode="never"
                     app:dividerH="@{@drawable/shape_transferant_divider}"
+                    app:dividerV="@{@drawable/shape_transferant_divider_16dp}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
@@ -184,12 +186,12 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/space_25"
                     android:background="@drawable/shape_goal_summary_bg"
                     android:lineSpacingExtra="@dimen/space_4"
                     android:padding="8dp"
                     android:text="@{vm.GSummary}"
                     android:textColor="@color/semi_white"
+                    tools:layout_marginTop="@dimen/default_space"
                     tools:text="To achieve your goal of saving 10,00,000 in 5 years you'll have to invest 1583 every month." />
 
             </LinearLayout>
