--- a/app/src/main/res/layout/summary_txt_percetage.xml
+++ b/app/src/main/res/layout/summary_txt_percetage.xml
@@ -8,6 +8,11 @@
         <variable
             name="goalSummary"
             type="com.tarrakki.module.yourgoal.GoalSummary" />
+
+        <variable
+            name="onAction"
+            type="android.widget.TextView.OnEditorActionListener" />
+
     </data>
 
     <RelativeLayout
@@ -21,20 +26,22 @@
 
         <EditText
             android:id="@+id/edtDurations"
+            onEditorAction="@{onAction}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/space_4"
             android:layout_toStartOf="@+id/tvDurations"
             android:background="@null"
-            android:inputType="number"
             android:gravity="center"
+            android:imeOptions="actionDone"
+            android:inputType="number"
             android:maxLength="2"
-            android:text="@={goalSummary.txt}"
+            android:text="@={goalSummary.value}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/semi_black"
-            tools:text="55"
-            app:isPositiveCurrency="@{true}" />
+            app:isPositiveCurrency="@{true}"
+            tools:text="55" />
 
         <TextView
             android:id="@+id/tvDurations"
