--- a/app/src/main/res/layout/fragment_your_goal.xml
+++ b/app/src/main/res/layout/fragment_your_goal.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -15,11 +13,20 @@
         android:id="@+id/mPageGoal"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />-->
-    <org.supportcompact.widgets.SnappyRecyclerView
+    <!--<android.support.v7.widget.RecyclerView
         android:id="@+id/rvPage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+        android:orientation="horizontal" />-->
+    <!--<org.supportcompact.widgets.NonSwipeableViewPager
+        android:id="@+id/mPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />-->
+
+    <org.supportcompact.widgets.CustomViewPager
+        android:id="@+id/mPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </layout>
