--- a/app/src/main/res/layout/row_investment_list_item.xml
+++ b/app/src/main/res/layout/row_investment_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="widget"
-            type="com.tarrakki.module.home.HomeItem" />
+            type="com.tarrakki.api.model.HomeData.Data.Category.SecondLevelCategory" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -21,11 +21,11 @@
 
         <ImageView
             android:id="@+id/ivItem"
+            imgUrl="@{widget.categoryImage}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            app:imgUrl="@{widget.imgUrl}"
             android:layout_marginTop="@dimen/space_8"
+            android:adjustViewBounds="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,9 +39,9 @@
             android:gravity="center_vertical"
             android:maxLines="2"
             android:minLines="2"
-            android:text="@{widget.title}"
-            android:textColor="@color/semi_black"
+            android:text="@{widget.categoryName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/semi_black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivItem"
             tools:text="Very Long Term Investments" />
@@ -52,8 +52,8 @@
             android:layout_height="wrap_content"
             android:maxLines="2"
             android:minLines="2"
+            android:text="@{widget.categoryDesctiption}"
             android:textSize="@dimen/sp10"
-            android:text="@{widget.description}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             tools:text="Diversified equity founds, 10+ years or longer" />
