1. Sign Up Api, Get OTP Api, Verify OTP Api implemented 2. Goal Summary issues fixed.

--- a/app/src/main/res/layout/question_amount.xml
+++ b/app/src/main/res/layout/question_amount.xml
@@ -55,10 +55,12 @@
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:hint="1,00,000"
+                android:imeOptions="actionNext"
                 android:inputType="number"
                 android:text="@={question.ans}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/semi_black"
+                android:nextFocusForward="@+id/edtDurations"
                 app:isPositiveCurrency="@{true}" />
 
         </LinearLayout>
