--- a/app/src/main/res/layout/fragment_your_goal_summary.xml
+++ b/app/src/main/res/layout/fragment_your_goal_summary.xml
@@ -87,9 +87,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_8"
                     android:fontFamily="@font/lato_bold"
-                    android:text="@string/dummy3"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                    android:textColor="@color/item_selected_color" />
+                    android:textColor="@color/item_selected_color"
+                    tools:text="@string/dummy3" />
 
                 <TextView
                     android:id="@+id/tvPMTFor"
