--- a/app/src/main/res/layout/summary_txt.xml
+++ b/app/src/main/res/layout/summary_txt.xml
@@ -16,20 +16,20 @@
 
     <EditText
         android:id="@+id/edtDurations"
+        maxValue="@{99}"
+        minValue="@{1}"
         onEditorAction="@{onAction}"
-        android:layout_width="56dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle_gray"
         android:gravity="center"
         android:imeOptions="actionDone"
-        android:inputType="number"
-        android:maxLength="2"
+        android:inputType="numberDecimal"
         android:paddingTop="@dimen/space_4"
         android:paddingBottom="@dimen/space_4"
         android:text="@={goalSummary.value}"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/semi_black"
-        app:isPositiveCurrency="@{true}"
-        tools:text="99" />
+        tools:text="99.99" />
 
 </layout>
