--- a/app/src/main/res/layout/summary_txt_percetage.xml
+++ b/app/src/main/res/layout/summary_txt_percetage.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -17,7 +16,7 @@
 
     <RelativeLayout
         android:id="@+id/llContainer2"
-        android:layout_width="56dp"
+        android:layout_width="@dimen/_60sdp"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectangle_gray"
         android:gravity="center_vertical"
@@ -26,6 +25,8 @@
 
         <EditText
             android:id="@+id/edtDurations"
+            maxValue="@{99}"
+            minValue="@{1}"
             onEditorAction="@{onAction}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,13 +36,11 @@
             android:background="@null"
             android:gravity="center"
             android:imeOptions="actionDone"
-            android:inputType="number"
-            android:maxLength="2"
+            android:inputType="numberDecimal"
             android:text="@={goalSummary.value}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/semi_black"
-            app:isPositiveCurrency="@{true}"
-            tools:text="55" />
+            tools:text="55.59" />
 
         <TextView
             android:id="@+id/tvDurations"
