1: Worked on resolving issues of the goal screens mentioned in the feedback. 2: Tested the goal screens of the app. 3: Worked on implement the API to get the fund list.

--- a/app/src/main/res/layout/fragment_recommended.xml
+++ b/app/src/main/res/layout/fragment_recommended.xml
@@ -125,6 +125,7 @@
                 android:layout_marginStart="@dimen/space_16"
                 android:layout_marginTop="@dimen/space_16"
                 android:layout_marginEnd="@dimen/space_16"
+                android:visibility="gone"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
                 android:lineSpacingExtra="@dimen/space_4"
