--- a/app/src/main/res/layout/dialog_invest.xml
+++ b/app/src/main/res/layout/dialog_invest.xml
@@ -2,6 +2,21 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="investment"
+            type="String" />
+
+        <variable
+            name="lumpsum"
+            type="String" />
+
+        <variable
+            name="durations"
+            type="String" />
+    </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,6 +56,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvInvestmentL" />
 
+        <TextView
+            android:id="@+id/tvRSLumpsum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_space"
+            android:text="@string/rs_symbol"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/edtLumpsum"
+            app:layout_constraintStart_toStartOf="@id/edtLumpsum"
+            app:layout_constraintTop_toTopOf="@id/edtLumpsum" />
+
         <EditText
             android:id="@+id/edtLumpsum"
             android:layout_width="match_parent"
@@ -50,10 +76,12 @@
             android:hint="@string/enter_one_time_lumpsum_amount"
             android:inputType="number"
             android:maxLines="1"
-            android:paddingStart="@dimen/default_space"
+            android:nextFocusForward="@+id/edtSIPAmount"
+            android:paddingStart="@dimen/_24sdp"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
+            android:text="@={lumpsum}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
             android:textColorHint="@color/darker_gray"
@@ -72,6 +100,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtLumpsum" />
 
+        <TextView
+            android:id="@+id/tvRSSIPAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_space"
+            android:text="@string/rs_symbol"
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/edtSIPAmount"
+            app:layout_constraintStart_toStartOf="@id/edtSIPAmount"
+            app:layout_constraintTop_toTopOf="@id/edtSIPAmount" />
+
         <EditText
             android:id="@+id/edtSIPAmount"
             android:layout_width="match_parent"
@@ -81,16 +120,53 @@
             android:hint="@string/enter_sip_amount"
             android:inputType="number"
             android:maxLines="1"
-            android:paddingStart="@dimen/default_space"
+            android:nextFocusForward="@+id/edtDurations"
+            android:paddingStart="@dimen/_24sdp"
             android:paddingTop="@dimen/space_8"
             android:paddingEnd="@dimen/default_space"
             android:paddingBottom="@dimen/space_8"
+            android:text="@={investment}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/black"
             android:textColorHint="@color/darker_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvSIPAmountL" />
+
+
+        <TextView
+            android:id="@+id/tvDurationsL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_space"
+            android:text="@string/sip_duration"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edtSIPAmount" />
+
+        <EditText
+            android:id="@+id/edtDurations"
+            maxValue="@{99}"
+            minValue="@{1}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_4"
+            android:background="@drawable/shape_edt_gray_round"
+            android:hint="@string/enter_sip_duration"
+            android:inputType="numberDecimal"
+            android:maxLines="1"
+            android:paddingStart="@dimen/default_space"
+            android:paddingTop="@dimen/space_8"
+            android:paddingEnd="@dimen/default_space"
+            android:paddingBottom="@dimen/space_8"
+            android:text="@={durations}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/black"
+            android:textColorHint="@color/darker_gray"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvDurationsL" />
 
         <Button
             android:id="@+id/btnInvest"
@@ -102,12 +178,12 @@
             android:fontFamily="@font/lato_semibold"
             android:paddingStart="@dimen/_24sdp"
             android:paddingEnd="@dimen/_24sdp"
-            android:text="@string/invest_now"
+            android:text="@string/apply_pmt"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edtSIPAmount" />
+            app:layout_constraintTop_toBottomOf="@id/edtDurations" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
