--- a/app/src/main/res/layout/question_amount.xml
+++ b/app/src/main/res/layout/question_amount.xml
@@ -8,6 +8,11 @@
         <variable
             name="question"
             type="com.tarrakki.api.model.Goal.Data.GoalData.Question" />
+
+        <variable
+            name="onAction"
+            type="android.widget.TextView.OnEditorActionListener" />
+
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -51,16 +56,17 @@
 
             <EditText
                 android:id="@+id/edtInvestAmount"
+                onEditorAction="@{onAction}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:hint="1,00,000"
                 android:imeOptions="actionNext"
                 android:inputType="number"
+                android:nextFocusForward="@+id/edtDurations"
                 android:text="@={question.ans}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/semi_black"
-                android:nextFocusForward="@+id/edtDurations"
                 app:isPositiveCurrency="@{true}" />
 
         </LinearLayout>
