--- a/app/src/main/res/layout/fragment_invest.xml
+++ b/app/src/main/res/layout/fragment_invest.xml
@@ -13,6 +13,7 @@
     </data>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/mScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
@@ -294,6 +295,9 @@
                 android:id="@+id/pbLoadMore"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:scaleX="0.6"
+                android:scaleY="0.6"
+                style="?android:attr/progressBarStyle"
                 android:layout_marginBottom="@dimen/_8sdp"
                 android:visibility="@{vm.loadMore?View.VISIBLE:View.GONE}" />
 
