--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="fund"
-            type="com.tarrakki.module.invest.Fund" />
+            type="com.tarrakki.api.model.FundsDetails" />
     </data>
 
     <android.support.v4.widget.NestedScrollView
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="4dp"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@{fund.name}"
+                    android:text="@{fund.fscbiLegalName}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/item_selected_color"
                     app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentL"
@@ -68,7 +68,7 @@
                     android:drawableEnd="@{fund.hasNegativeReturn? @drawable/ic_arrow_downward_red_24dp:@drawable/ic_arrow_upward_green}"
                     android:drawablePadding="@dimen/space_2"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="@{fund.temp}"
+                    android:text="39.550"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@android:color/black"
                     app:layout_constraintBaseline_toBaselineOf="@+id/tvCurrentL"
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/space_8"
-                    android:text="NAV on 16 Aug, 2018"
+                    android:text="@{@string/nav_on + ` ` + fund.NAVDate}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -113,10 +113,11 @@
                     android:id="@+id/tvRiskLevel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Moderately High"
+                    android:text="@{fund.fscbiIndianRiskLevel}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     app:layout_constraintBaseline_toBaselineOf="@+id/tvRiskLevelL"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="Moderately High" />
 
                 <ProgressBar
                     android:id="@+id/progress"
@@ -128,10 +129,11 @@
                     android:layout_marginTop="@dimen/space_8"
                     android:layout_marginBottom="@dimen/space_8"
                     android:max="100"
-                    android:progress="75"
+                    android:progress="@{fund.riskProgress}"
                     android:progressDrawable="@drawable/progress_horisental"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tvRiskLevel" />
+                    app:layout_constraintTop_toBottomOf="@+id/tvRiskLevel"
+                    tools:progress="75" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -186,8 +188,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_8"
                     android:layout_marginBottom="@dimen/space_8"
-                    android:text="@string/fund_objective_info"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                    android:text="@{fund.investmentStrategy}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    tools:text="@string/fund_objective_info" />
 
             </LinearLayout>
 
