--- a/app/src/main/res/layout/row_top_ten_holdings_list_item.xml
+++ b/app/src/main/res/layout/row_top_ten_holdings_list_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="topFund"
-            type="com.tarrakki.module.funddetails.TopHolding" />
+            type="com.tarrakki.api.model.TopTenHolding" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -28,7 +28,7 @@
             android:id="@+id/tvRiskLevel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{topFund.percentageHolding + `%`}"
+            android:text="@{topFund.percentage}"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             app:layout_constraintBaseline_toBaselineOf="@+id/progress"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,8 +44,8 @@
             android:layout_centerVertical="true"
             android:layout_marginTop="@dimen/space_8"
             android:layout_marginEnd="8dp"
-            android:max="100"
-            android:progress="@{topFund.process}"
+            android:max="10000"
+            android:progress="@{topFund.progress}"
             android:progressDrawable="@drawable/progress_horisental"
             app:layout_constraintEnd_toStartOf="@+id/tvRiskLevel"
             app:layout_constraintStart_toStartOf="parent"
